--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Permalinks
-permalink:           /blog/:title
+permalink:           /anotherblog/:title
 
 # Setup
 title:               'Ho Ho'
@@ -23,4 +23,4 @@ author:
 # Custom vars
 version:             1.0.0
 github:
-  repo:              https://github.com/bradleytaunt/lightspeed
+  repo:              https://github.com/HongyuanH/anotherblog.git
